force-app/main/default/objects/BatalhasContato__c/BatalhasContato__c.object-meta.xml
<CustomObject>
    <description>Batalhas em que o Contato participou.</description>
    <label>Batalhas do Contato</label>
    <nameField>
        <displayFormat>BTLCTT{000000}</displayFormat>
        <label>Batalha do Contato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batalhas do Contato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>