force-app/main/default/objects/BatalhasContato__c/fields/Batalha__c.field-meta.xml
<CustomField>
    <fullName>Batalha__c</fullName>
    <inlineHelpText>Campo de relacionamento entre Batalha do Contato e Batalha</inlineHelpText>
    <label>Batalha</label>
    <referenceTo>Batalha__c</referenceTo>
    <relationshipLabel>Batalhas do Contato</relationshipLabel>
    <relationshipName>Batalha</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>