force-app/main/default/objects/BatalhasContato__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de relacionamento entre Batalhas do Contato e Contato</description>
    <inlineHelpText>Campo de relacionamento entre Batalhas do Contato e Contato</inlineHelpText>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Batalhas do Contato</relationshipLabel>
    <relationshipName>BatalhasContatoContato</relationshipName>
    <type>Lookup</type>
</CustomField>