force-app/main/default/objects/BatalhasContato__c/fields/NomeBatalha__c.field-meta.xml
<CustomField>
    <fullName>NomeBatalha__c</fullName>
    <description>O nome da Batalha</description>
    <formula>Batalha__r.Name</formula>
    <inlineHelpText>O nome da Batalha</inlineHelpText>
    <label>Nome da Batalha</label>
    <type>Text</type>
</CustomField>